feat: Enhance UI and introduce animation support
Adds `referrerPolicy="no-referrer"` to all logo images to prevent unnecessary requests and potential referrer leakage.
Introduces a CSS class `animate-in` to ensure smooth animations for UI elements.
Improves the overall visual presentation and user experience.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       input:focus, select:focus, button:focus {
         outline: none;
       }
+      /* Ensure animations are smooth */
+      .animate-in {
+        animation-fill-mode: forwards;
+      }
     </style>
     <script type="importmap">
 {
